	
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* UI fully functionnal

2005-04-25 François Proulx <francois.proulx@gmail.com
	* Completed integration of new interface with new objects
	
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Integration merge, should work, but there will be display problems everywhere.  Expect further commits today.
	* Almost 100% complete Network abstraction
	* Much better object encapsulation.  Deprecated methods not removed yet.
	* Add MainUI class.  Used to display the interface.  Inner workings still need work.
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Added Preferred Size support for Flickr pictures
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Completed missing translations
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Fixed bugs in File and EmbeddedContent
	* Completed first iteration of EmbeddedContent
	* Can now play multimedia content
	* Could not test fallback with my browser ( Safari and Firefox )
	* Need help to test content in different browser to see how it reacts...
	
2005-04-22 François Proulx <francois.proulx@gmail.com>
	* Fixed bug in FlickrPhotostream.php
	* Params did not match new methods requirements ( getUserByEmail )
	* Changed stylesheet class name for Flickr to match new changes
	* Fixed bugs in File
	* Wrote part of EmbeddedContent ( partially working )
	* TODO: add support for parameters and attributes in EmbeddedContent
	
2005-04-22 François Proulx <francois.proulx@gmail.com>
	* Fix schema version in François's commit
	
2005-04-21 François Proulx <francois.proulx@gmail.com>
	* Added explicit admin UI exceptions support for Flickr
	* Completed File and Picture objects
	
2005-04-20 François Proulx <francois.proulx@gmail.com>
	* Completed Flickr support ( explicit exceptions catching )
	* Most of File object is done
	* Fixed bug in generic_object_admin.php
	* changed stylesheet class tags for Flickr
	