@@ -62,8 +62,7 @@
     </td>
   </tr>
 </table>
-</div>
-
+<br>
 {if !$node_info}
 <input type="hidden" name="action" value="add_new_node">
 <input type="submit" value="{"Add new node"|_}">
@@ -71,8 +70,7 @@
 <input type="hidden" name="action" value="update_node">
 <input type="submit" value="{"Update node"|_}">
 {/if}
-
+<p>Work in progress note: Better DB integrity testing is needed before allowing the hotspot ID modification.</p>
+</div>
 </form>
 
-<br>
-<p>Work in progress note: Better DB integrity testing is needed before allowing the hotspot ID modification.</p>
