@@ -1,7 +1,11 @@
-	
+2005-04-25 François Proulx <francois.proulx@gmail.com>
+	* Much better stylesheet
+		
 2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
 	* UI fully functionnal
 
+2005-04-25 François Proulx <francois.proulx@gmail.com
+	* More interface work
 2005-04-25 François Proulx <francois.proulx@gmail.com
 	* Completed integration of new interface with new objects
 	
